--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.josemarcellio.evelynresourcepack</groupId>
     <artifactId>EvelynResourcePack</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.4-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -22,13 +22,36 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>nickuc-repo</id>
+            <url>https://repo.nickuc.com/maven2/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.16.2-R0.1-SNAPSHOT</version>
+            <version>1.17.1-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>fr.xephi</groupId>
+            <artifactId>authme</artifactId>
+            <version>5.6.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nickuc.login</groupId>
+            <artifactId>loader</artifactId>
+            <scope>system</scope>
+            <version>9.4.0</version>
+            <systemPath>${project.basedir}/libs/nLogin.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.nickuc.openlogin</groupId>
+            <artifactId>openlogin-universal</artifactId>
+            <version>1.3</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
