--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,6 +6,24 @@ EvelynResourcePack:
   Delay: 1 #second
   URL-Link: "your-resourcepack-url"
 
+  ActionBar:
+    Accept:
+      Messages: "&eAccept Downloading ResourcePack!"
+      Duration: 2 #second
+      Enable: true
+    Success:
+      Messages: "&eSuccess Downloading ResourcePack!"
+      Duration: 2 #second
+      Enable: true
+    Failed:
+      Messages: "&eFailed Downloading ResourcePack!"
+      Duration: 2 #second
+      Enable: true
+    Declined:
+      Messages: "&eYou Declined ResourcePack!"
+      Duration: 2 #second
+      Enable: true
+
   Sound:
     Accept:
       Sound: "LEVEL_UP"
@@ -32,30 +50,30 @@ EvelynResourcePack:
     Accept:
       Title: "&6&lEvelynResourcePack"
       SubTitle: "&eAccept Downloading ResourcePack!"
-      FadeIn: 5
-      Stay: 40
-      FadeOut: 5
+      FadeIn: 5 #tick
+      Stay: 40 #tick
+      FadeOut: 5 #tick
       Enable: true
     Success:
       Title: "&6&lEvelynResourcePack"
       SubTitle: "&eSuccess Downloading ResourcePack!"
-      FadeIn: 5
-      Stay: 40
-      FadeOut: 5
+      FadeIn: 5 #tick
+      Stay: 40 #tick
+      FadeOut: 5 #tick
       Enable: true
     Failed:
       Title: "&6&lEvelynResourcePack"
       SubTitle: "&eFailed Downloading ResourcePack!"
-      FadeIn: 5
-      Stay: 40
-      FadeOut: 5
+      FadeIn: 5 #tick
+      Stay: 40 #tick
+      FadeOut: 5 #tick
       Enable: true
     Declined:
       Title: "&6&lEvelynResourcePack"
       SubTitle: "&eYou Declined ResourcePack!"
-      FadeIn: 5
-      Stay: 40
-      FadeOut: 5
+      FadeIn: 5 #tick
+      Stay: 40 #tick
+      FadeOut: 5 #tick
       Enable: true
 
   Messages:
@@ -74,6 +92,24 @@ EvelynResourcePack:
         - ""
         - "              &6&lEvelynResourcePack"
         - "     &eAccept Downloading ResourcePack!"
+        - ""
+        - "&b&m                                                          &b"
+      Enable: true
+    Declined:
+      Messages:
+        - "&b&m                                                          &b"
+        - ""
+        - "              &6&lEvelynResourcePack"
+        - "     &eYou Declined ResourcePack!"
+        - ""
+        - "&b&m                                                          &b"
+      Enable: true
+    Failed:
+      Messages:
+        - "&b&m                                                          &b"
+        - ""
+        - "              &6&lEvelynResourcePack"
+        - "     &eFailed Downloading ResourcePack!"
         - ""
         - "&b&m                                                          &b"
       Enable: true
