--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,42 @@
 #Evelyn ResourcePack by JoseMarcellio
 #evelyn.bypass for bypass resourcepack!
 #use /n on kick for next line!
+#use %player% to get player name on discord-webhook
+#if you want tO use discord web-hook
+#read this https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
+#set URL-Link with your discord webhook link
+#and set Enable: true
 
 EvelynResourcePack:
   Delay: 1 #second
   URL-Link: "your-resourcepack-url"
+
+  Discord-Webhook:
+    URL-Link: "your-discord-webhook-url"
+    Accept:
+      Author: "Evelyn Webhook"
+      Profile: "https://minotar.net/helm/%player%/100.png"
+      Title: "EvelynResourcePack"
+      Description: "%player% Accept Downloading ResourcePack!"
+      Enable: false
+    Success:
+      Author: "Evelyn Webhook"
+      Profile: "https://minotar.net/helm/%player%/100.png"
+      Title: "EvelynResourcePack"
+      Description: "%player% Success Downloading ResourcePack!"
+      Enable: false
+    Failed:
+      Author: "Evelyn Webhook"
+      Profile: "https://minotar.net/helm/%player%/100.png"
+      Title: "EvelynResourcePack"
+      Description: "%player% Failed Downloading ResourcePack!"
+      Enable: false
+    Declined:
+      Author: "Evelyn Webhook"
+      Profile: "https://minotar.net/helm/%player%/100.png"
+      Title: "EvelynResourcePack"
+      Description: "%player% Declined ResourcePack!"
+      Enable: false
 
   ActionBar:
     Accept:
