--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: EvelynResourcePack
 version: 1.6
 main: com.josemarcellio.evelynresourcepack.Main
 authors: [JoseMarcellio]
-description: a lightweight resource pack downloader!
+description: a lightweight resource pack downloader plugin!
 load: POSTWORLD
 softdepend:
   - AuthMe
